--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
+    "bootstrap": "^4.3.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
+    "react-aspect-ratio": "^1.0.41",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-dropdown": "^1.6.4",
+    "react-fittext": "^1.0.0",
+    "react-fontawesome": "^1.6.1",
+    "react-icons": "^3.7.0",
+    "react-id-swiper": "^2.3.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-swipe": "^6.0.4",
+    "react-textfit": "^1.1.0",
+    "react-ticker": "^1.2.1",
+    "swipe": "^1.7.7",
+    "swipe-js-iso": "^2.1.5",
+    "swiper": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
