--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-id-swiper": "^2.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-social-icons": "^4.1.0",
     "react-swipe": "^6.0.4",
     "react-textfit": "^1.1.0",
     "react-ticker": "^1.2.1",
