--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
+    "antd": "^3.24.2",
     "bootstrap": "^4.3.1",
+    "d3": "^5.12.0",
+    "d3-array": "^2.3.3",
+    "d3-scale": "^3.1.0",
+    "d3-selection": "^1.4.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-aspect-ratio": "^1.0.41",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.10.2",
     "react-dropdown": "^1.6.4",
     "react-fittext": "^1.0.0",
