--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
     "antd": "^3.24.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
     "d3-array": "^2.3.3",
     "d3-scale": "^3.1.0",
     "d3-selection": "^1.4.0",
+    "highcharts": "^7.2.0",
+    "highcharts-react": "^0.0.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-aspect-ratio": "^1.0.41",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-country-flag": "^1.1.0",
     "react-d3-components": "^0.9.1",
     "react-dom": "^16.10.2",
     "react-dropdown": "^1.6.4",
     "react-fittext": "^1.0.0",
     "react-fontawesome": "^1.6.1",
+    "react-highcharts": "^16.1.0",
     "react-icons": "^3.7.0",
     "react-id-swiper": "^2.3.2",
     "react-router-dom": "^5.1.2",
