--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.11.0",
     "react-aspect-ratio": "^1.0.41",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-burger-menu": "^2.6.11",
     "react-country-flag": "^1.1.0",
     "react-d3-components": "^0.9.1",
     "react-dom": "^16.10.2",
