--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-highcharts": "^16.1.0",
     "react-icons": "^3.8.0",
     "react-id-swiper": "^2.3.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-scroll-to-component": "^1.0.2",
@@ -38,6 +39,8 @@
     "react-swipe": "^6.0.4",
     "react-textfit": "^1.1.0",
     "react-ticker": "^1.2.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "swipe": "^1.7.7",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^5.1.0"
