--- a/beta-website-app.yaml
+++ b/beta-website-app.yaml
@@ -20,10 +20,18 @@ env: flex
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
 manual_scaling:
-  instances: 1
+  instances: 2
 resources:
   cpu: 1
-  memory_gb: 0.5
+  memory_gb: 1
   disk_size_gb: 10
-
+handlers:
+  # Serve all static files with urls ending with a file extension
+- url: /(.*\..+)$
+  static_files: build/\1
+  upload: build/(.*\..+)$
+  # catch all handler to index.html
+- url: /.*
+  static_files: build/index.html
+  upload: build/index.html
 # [END gae_flex_quickstart_yaml]
