--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-ticker": "^1.2.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "swipe": "^1.7.7",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^5.1.0"
