--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
-CONTENTFUL_API_KEY=
-ACCESS_TOKEN=
-PREVIEW_ACCESS_TOKEN=
-SPACE_ID=
+REACT_APP_CONTENTFUL_API_KEY=
+REACT_APP_ACCESS_TOKEN=
+REACT_APP_PREVIEW_ACCESS_TOKEN=
+REACT_APP_SPACE_ID=
