--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "highcharts-react": "^0.0.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
-    "react": "^16.12.0",
     "node-sass": "^4.13.0",
+    "react": "^16.12.0",
     "react-aspect-ratio": "^1.0.41",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-burger-menu": "^2.6.11",
@@ -32,7 +32,7 @@
     "react-fontawesome": "^1.6.1",
     "react-highcharts": "^16.1.0",
     "react-icons": "^3.8.0",
-    "react-id-swiper": "^2.3.2",
+    "react-id-swiper": "2.3.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -44,8 +44,8 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "semver": "^6.3.0",
     "reselect": "^4.0.0",
+    "semver": "^6.3.0",
     "styled-components": "^4.4.1",
     "swipe": "^1.7.7",
     "swipe-js-iso": "^2.1.5",
@@ -60,10 +60,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },              
+  },
   "engines": {
-    "node": "12.x.x"  
-  },             
+    "node": "12.x.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
