--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,8 @@ version: "3.7"
 services:
   # React Frontend Website
   website:
-    build: 
-      context: .
-      dockerfile: react.dockerfile
-    command: npm start 
-    working_dir: /var/www
+    build: .
     #You can change this to live server port
     ports:
-      - 3000:3000
+      - 3000:5000
+      - 8080:5000
