--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,17 @@
 # gcloud builds submit . --config=cloudbuild.yaml
 
 steps:
-# - name: 'gcr.io/cloud-builders/npm'
-#   args: ['install']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
 
-# - name: 'gcr.io/cloud-builders/npm'
-#   args: ['run', 'test:unit']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'test:unit']
 
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/new-website', '.']
 
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['app', 'deploy']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy']
 
 images: [gcr.io/$PROJECT_ID/new-website]  
 timeout: "1600s"
