--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,8 +4,8 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 
-- name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'test:unit']
+# - name: 'gcr.io/cloud-builders/npm'
+#   args: ['run', 'test:unit']
 
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/new-website', '.']
