--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "tests": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -75,5 +76,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
