--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,20 @@
 # gcloud builds submit . --config=cloudbuild.yaml
 
 steps:
-# - name: 'gcr.io/cloud-builders/npm'
-#   args: ['install']
-
-# - name: 'gcr.io/cloud-builders/npm'
-#   args: ['run', 'test:unit']
-
+# builds the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/new-website', '.']
+  args: ['build', '-t', 'gcr.io/fast-gke/new-website:$SHORT_SHA', '.']
+  
+# push container image
+- name: "gcr.io/cloud-builders/docker"
+  args: ["push", "gcr.io/fast-gke/new-website:$SHORT_SHA"]
+  
+# deploy container image to GKE
+- name: "gcr.io/cloud-builders/gke-deploy:stable"
+  args:
+    - run
+    - --filename=k8s-config.yml
+    - --image=gcr.io/fast-gke/new-website.js:$SHORT_SHA
+    - --location=us-central1
+    - --cluster=fast-dev-cluster 
 
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['app', 'deploy']
-
-images: [gcr.io/$PROJECT_ID/new-website]  
-timeout: "1600s"
