--- a/package.json
+++ b/package.json
@@ -27,9 +27,17 @@
     "file-loader": "^5.0.2",
     "highcharts": "^7.2.0",
     "highcharts-react": "^0.0.3",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.0.0",
+    "jimp": "^0.9.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "lqip-loader": "^2.2.0",
     "next": "^9.1.6",
+    "next-optimized-images": "^2.5.4",
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -59,15 +67,18 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "resolve-url-loader": "^3.1.1",
+    "responsive-loader": "^1.2.0",
     "sass-loader": "^8.0.0",
     "semver": "^6.3.0",
     "style-loader": "^1.1.2",
     "styled-components": "^4.4.1",
+    "svg-sprite-loader": "^4.1.6",
     "swipe": "^1.7.7",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^5.1.0",
     "typescript": "^3.7.2",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "webp-loader": "^0.6.0"
   },
   "scripts": {
     "analyze": "ANALYZE=true yarn build",
