--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "12.x.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
