--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,6 @@
       }
     },
           "plugins": [
-        ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
+        ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
       ]
   }
